fix alert-danger to reddish color in dark mode

--- a/html/master.css
+++ b/html/master.css
@@ -88,9 +88,14 @@ body.dark-theme {
   color: var(--color-text-dark) !important;
 }
 
-.dark-theme .alert {
+.dark-theme .alert-info {
   background-color: #151718 !important;
   border-color: #373d3e !important;
+}
+
+.dark-theme .alert-danger {
+  background-color: #300401 !important;
+  border-color: #442b2b !important;
 }
 
 .dark-theme .alert * {
